[project]
name = "TLBVFI"
description = "wrapper for the TLB-VFI: Temporal-Aware Latent Brownian Bridge Diffusion for Video Frame Interpolation project"
version = "0.2.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/BobRandomNumber/ComfyUI-TLBVFI"

[tool.comfy]
PublisherId = "bobrandomnumber"
DisplayName = "ComfyUI-TLBVFI"
Icon = ""
includes = []




